# Roxy

./: .gitignore  Procfile  pyproject.toml  requirements.txt
roxy/: __init__.py  a.py  register_slash_commands.py
roxy/pixiv/: common.py  proxy.py
tests/: test_roxy.py
