[tool.poetry]
name = "Roxy"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <rphln@users.noreply.github.com>"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
discord-interactions = "^0.3.0"
Flask = "^2.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
